# amp-crewai-demo

./: README.md  api.py  main.py  openapi.json  openapi.yaml  pyproject.toml
crewai/: README.md  pyproject.toml  research.py
langgraph/: README.md  pyproject.toml
langgraph-standard/: .env.example  README.md  api.py  main.py  openapi.yaml  requirements.txt  research.py
