[project]
name = "crewai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amp-instrumentation>=0.1.2",
    "crewai>=1.7.2",
    "crewai-tools>=1.7.2",
    "fastapi>=0.115.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
override-dependencies = [
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-common>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
]
