[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Research workflow using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "tavily-python>=0.5.0",
    "amp-instrumentation>=0.1.2",
]
